(add new changes on top of this file)

Änderungen
----------
v0.6.1 (??.12.2010)
 * tx_rnbase_Misc: Inlcude tstemplate.php in prepareTSFE()
 * BaseMarker: Missing include of tx_rnbase fixed

v0.6.0 (30.12.2009)
 * SearchBase: CUSTOM orderby clause is possible
 * SearchGeneric: double alias declaration for base table removed

v0.5.5 (23.12.2009) (not released)
 * There is a new class tx_rnbase_util_Templates for marker substitutions HTML templates. It does the same as substituteMarkerArrayCached but has no call to $GLOBALS['TT']. This heavily reduces memory consumption. 

v0.5.4 (15.12.2009) (not released)
 * New class tx_rnbase_mod_Tables
 * New method tx_rnbase::getClassInfo()
 * additional BE user access removed from BaseModule
 * tx_rnbase_configurations::createLink will now return instances of tx_rnbase_util_Link

v0.5.3 (22.11.2009)
 * TSDAM: Usage of tx_dam_media removed. This class can't handle two dam records for one single media path.
 * New framework for backend modules
 * PageBrowser: limit is never larger then list size

v0.5.2 (07.11.2009)
* SearchBase: OP_INSET_INT works for multiple values
* TSDAM: new implementation of fetchFileList()
* BaseView: automatic call of tx_rnbase_util_BaseMarker::callModules()
* Small bugfix for map rendering

v0.5.1 (28.10.2009) (not released)
* tx_rnbase_util_DB::doSelect(): new options sqlonly and union
* tx_rnbase_util_SearchBase: Support for sqlonly and union
* tx_rnbase_util_SearchBase: Some modifications for alias support. Thanks to Lars Heber!
* New class tx_rnbase_util_SearchGeneric: a configurable implementation for tx_rnbase_util_SearchBase.

v0.5.0 (25.09.2009)
* Performancetests for views (subclasses of BaseIOC) and ListBuilder.
* TSDAM: i18n-Support for DAM 1.1.0 and higher only
* BaseMarker: new method findUnusedCols()

v0.4.5 (21.09.2009) (not released)
* Memory output in sql debug
* New parameter $template for BaseMarker::initLink()
* BaseFilter::init() with return value
